Time: 28 ms (79.89%) | Memory: 51.7 MB (44.63%) - LeetSync